--- a/pviewer5/QuickFilterDialog.xaml
+++ b/pviewer5/QuickFilterDialog.xaml
@@ -15,7 +15,7 @@
             <Setter Property="HorizontalAlignment" Value="Center"/>
         </Style>
         <local:MACConverter x:Key="macconverter"/>
-        <local:CSIP4Converter x:Key="CSIP4converter"/>
+        <local:IP4Converter x:Key="IP4converter"/>
     </Window.Resources>
     <Grid Name="QFDgrid"
           Margin="20,29,20,11.333"
@@ -97,18 +97,18 @@
                     <DataGridComboBoxColumn Header="Incl/Excl" ItemsSource="{Binding Source={x:Static local:QuickFilterTools.QFInclItems}}" SelectedItemBinding="{Binding Path=inclusion}"/>
                     <DataGridTextColumn Header="Mask" >
                         <DataGridTextColumn.Binding>
-                            <Binding Path="mask" Converter="{StaticResource CSIP4converter}" >
+                            <Binding Path="mask" Converter="{StaticResource IP4converter}" >
                                 <Binding.ValidationRules>
-                                    <local:ValidateCSIP4/>
+                                    <local:ValidateIP4/>
                                 </Binding.ValidationRules>
                             </Binding>
                         </DataGridTextColumn.Binding>
                     </DataGridTextColumn>
                     <DataGridTextColumn Header="IP4 Address" >
                         <DataGridTextColumn.Binding>
-                            <Binding Path="value" Converter="{StaticResource CSIP4converter}" >
+                            <Binding Path="value" Converter="{StaticResource IP4converter}" >
                                 <Binding.ValidationRules>
-                                    <local:ValidateCSIP4/>
+                                    <local:ValidateIP4/>
                                 </Binding.ValidationRules>
                             </Binding>
                         </DataGridTextColumn.Binding>
